# vicon_pose_correction

./: CMakeLists.txt  README.md
matlab/: align_signals.m  fit_model.m  plot_3d.m  plot_marker_map.m  ransac_alignement.m  sync_signals.m
matlab/calibration/: calib.txt
matlab/data/: VICON0805_20160805_173725.bag  VICON0805_20160805_173725.csv  map_0.bag  markertracker_camera_pose_map_0.bckp.csv  markertracker_camera_pose_map_0.csv  markertracker_camera_pose_turnaround_0.csv
matlab/signal alignment/: align_signals.asv  align_signals.m  alignement_test.m  load_data.m  test_shift.m
matlab/signal alignment/data/: VICON0805_20160805_173725_factor100_new.csv
src/: BetweenFactorVicon.h  CMakeLists.txt  OffsetFactorVicon.h  align_from_offsets.cpp  align_poses.cpp  main.cpp
